feat: Grandes melhorias de qualidade e funcionalidades
Backend (Spring Boot):
- ✅ Correções SonarLint: Constructor injection, exceções customizadas, streams Java 16+
- ✅ Segurança: Senha DB removida, configuração por variável ambiente
- ✅ Controllers: Tipos específicos ResponseEntity<Object>
- ✅ Services: Autor, Categoria, Genero, Usuario corrigidos
- ✅ Novas exceções: BibliotecaException, EntityNotFoundException, EntityAlreadyExistsException

Frontend (React/Vite):
- ✅ Novos componentes: CadastroAutor, CadastroCategoria, CadastroGenero, etc.
- ✅ Páginas remodeladas: Autores, Categorias, Generos, Emprestimos
- ✅ Serviços API melhorados com validações

Infraestrutura:
- ✅ Dependências atualizadas (Maven/Frontend)
- ✅ Configurações otimizadas

Impacto: Código mais seguro, moderno e manutenível. SonarLint score significativamente melhorado.